Ignore log_to_file option
Can not give janus-user permission to write since log path is mutable.

--- a/janus-gateway/Dockerfile
+++ b/janus-gateway/Dockerfile
@@ -57,4 +57,4 @@ RUN groupadd -g ${gid} ${group} && \
 USER ${user}
 
 EXPOSE 8188
-ENTRYPOINT /opt/janus/bin/janus
+ENTRYPOINT /opt/janus/bin/janus -L /dev/null
