feat: add timezone configuration and cleanup Dockerfile
- Added timezone configuration to the compose.yaml file.
- Updated Dockerfile to install tzdata and set DEBIAN_FRONTEND.
- Cleaned up Dockerfile by removing apt lists and source directories.

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,5 +10,7 @@ services:
   janus:
     image: saverops/janus-gateway
     build: janus-gateway
+    environment:
+      - TZ=Asia/Tokyo
     ports:
       - 8188:8188
